--- a/source/doc/dox/03_firmware_compile.dox
+++ b/source/doc/dox/03_firmware_compile.dox
@@ -3,6 +3,8 @@
 
 You must compile the Thingy firmware using either GCC or Keil μVision.
 
+For prerequisites related to compiling, see <a href="https://nordicsemiconductor.github.io/Nordic-Thingy52-FW/" target="_blank">Nordic Thingy:52 GitHub page</a>.
+
 @section compile_keil Compiling with Keil
 
 Before starting this procedure, make sure you have <a href="https://www.keil.com/demo/eval/arm.htm/" target="_blank">Keil</a> installed on your computer. 
@@ -11,8 +13,8 @@ Follow these steps to compile the Thingy firmware using Keil:
 -# Navigate to the folder @c \\project\\pca20020_s132\\arm5_no_packs\ and double-click the project file @c ble_app_thingy_s132_pca20020.uvprojx.
 The μVision integrated development environment (IDE) opens.
 @image html keil1.png "Keil μVision IDE"
--# If you are compiling for the newest version of the Thingy hardware, select <b>release</b> from the target drop-down menu, as shown in the figure.
-@image html keil2.png "Select <b>release</b> from the menu"
+-# If you are compiling for the newest Thingy hardware version, select <b>release</b> from the target drop-down menu, as shown in the figure.
+@image html keil2.png "Select 'release' from the menu"
 -# Select the appropriate Thingy version from the list. To check the version of your Thingy, you must remove the top rubber cover. The version number can be found on a white label on the PCB. To compile a debug version, select <b>debug</b>.
 -# To build the project, press F7 or click <b>Build</b>. The output will be visible in the Build Output window at the bottom and should finish with "0 Errors, 0 Warnings".  If you are compiling for an older Thingy version, you will receive a warning stating the version that you are compiling for.
 @image html keil3.png "Building the project"
