--- a/source/doc/dox/firmware_upgrade_cable.dox
+++ b/source/doc/dox/firmware_upgrade_cable.dox
@@ -1,18 +1,26 @@
 /**
 @page dfu_cable Firmware upgrade using nRFgo Studio (cable connection)
 
-This firmware upgrade scenario involves uploading the Thingy application onto the board using a cable connection. Optionally, you can also flash the bootloader and its settings.
+This firmware upgrade scenario involves uploading the Thingy application onto the board using a cable connection.
 
-You will require <a href="http://www.nordicsemi.com/eng/Products/2.4GHz-RF/nRFgo-Studio/(language)/eng-GB" target="blank">nRFgo Studio</a> to run this procedure.
+You will require <a href="http://www.nordicsemi.com/eng/Products/2.4GHz-RF/nRFgo-Studio/(language)/eng-GB" target="blank">nRFgo Studio</a> to run this procedure. Alternatively, you can use a J-Link programmer.
 
-To upgrade the firmware with nRFgo Studio, follow these steps:
+Follow these steps to update Thingy using your own compiled application:
 
 -# Start nRFgo Studio.
 -# Connect your board to the host.
 -# Select <strong>nRF52 development boards</strong>.
--# Select the <strong>Program Application</strong> tab.
--# Click <strong>Browse</strong> to locate the application HEX file that you want to program.
--# Click <strong>Program</strong>.
+-# Click <strong>Erase all</strong>.
+-# In the <strong>Program SoftDevice</strong> tab, browse for the S132 v4.0.2 HEX file and click Program.
+-# In the <strong>Program Application</strong> tab, browse for your application HEX file and click <strong>Program</strong>.
+
+Follow these steps to flash the factory image:
+
+-# Start nRFgo Studio.
+-# Connect your board to the host.
+-# Select <strong>nRF52 development boards</strong>.
+-# Click <strong>Erase all</strong>.
+-# In the <strong>Program Application</strong> tab, browse for the factory HEX file and click <strong>Program</strong>.
 
 @image html firmware_cable.png "Application programming in nRFgo Studio"
 
